--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -10,13 +10,19 @@ button {
   padding: 8px 16px;
   width: 75px;
   height: 40px;
-  background: #cfcfcf;
+  border-radius: 8px;
+  border: none;
+  font-weight: 500;
+  background-color: #4e75ff;
+  color: #fff;
+  transition: background-color 500ms;
 }
 .timer {
   display: flex;
   gap: 24px;
   width: 346px;
   height: 72px;
+  gap: 24px;
 }
 .value {
   font-family: 'Montserrat', sans-serif;
@@ -36,4 +42,43 @@ button {
 .field {
   width: 55px;
   height: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-transform: uppercase;
+}
+
+input {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  padding-left: 24px;
+  border: 1px solid #808080;
+  outline: transparent;
+  transition: border-color 500ms;
+}
+
+input:hover {
+  border: 1px solid #000000;
+}
+
+input:active {
+  border: 1px solid #4e75ff;
+}
+
+input:disabled {
+  color: #808080;
+}
+
+button {
+}
+
+button:hover {
+  background-color: #6c8cff;
+}
+
+button:disabled {
+  background-color: #cfcfcf;
+  color: #989898;
 }
